--- a/index.html
+++ b/index.html
@@ -488,9 +488,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://jmfl.com/our-presence"
-                  >our presence
-                </a>
+                <a class="nav-link">our presence </a>
               </li>
             </ul>
           </div>
