--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0" />
+    <link rel="Icon" href="assets/JM title logo.jpg" />
+    <title>Our philosophy | JM Financial Limited</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
